--- a/style.css
+++ b/style.css
@@ -1,3 +1,46 @@
-.black-txt{
-    color: #000;
+.img-height {
+  height: 100vh;
+  background-color: black;
+}
+
+.navbar {
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  max-width: 100%;
+}
+
+/* .carousel-test {
+  z-index: 5;
+} */
+
+#logo-n-timer-container {
+  z-index: 2;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 35%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 800px; /* Need a specific value to work */
+}
+
+#logo {
+  width: 100%;
+  top: 45%;
+}
+
+#timer {
+  top: 50%;
+  color: #fff;
+  font-size: 100px;
+}
+
+@media only screen and (max-width: 600px) {
+  #logo-n-timer-container {
+    width: 200px;
+  }
+  #timer {
+    font-size: 25px;
+  }
 }
