--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+html,body
+{
+    /* width: 100%;
+    height: 100%; */
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 .img-height {
   height: 100vh;
   background-color: black;
@@ -6,7 +15,7 @@
 .navbar {
   position: absolute;
   width: 100%;
-  z-index: 1;
+  z-index: 100;
   max-width: 100%;
 }
 
@@ -36,11 +45,43 @@
   font-size: 100px;
 }
 
-@media only screen and (max-width: 600px) {
+
+
+@media only screen and (max-width: 800px) {
   #logo-n-timer-container {
-    width: 200px;
+    width: 600px;
   }
   #timer {
-    font-size: 25px;
+    font-size: 55px;
+  }
+}
+
+
+@media only screen and (max-width: 700px) {
+  #logo-n-timer-container {
+    width: 500px;
+  }
+  #timer {
+    font-size: 45px;
+  }
+}
+
+
+
+@media only screen and (max-width: 600px) {
+  #logo-n-timer-container {
+    width: 400px;
+  }
+  #timer {
+    font-size: 45px;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  #logo-n-timer-container {
+    width: 300px;
+  }
+  #timer {
+    font-size: 30px;
   }
 }
