--- a/gallery-style.css
+++ b/gallery-style.css
@@ -1,9 +1,9 @@
-body {
-  /* background-color: #1d1d1d !important; */
+/* body {
+  
   font-family: "Asap", sans-serif;
   color: #989898;
   font-size: 16px;
-}
+} */
 
 #demo {
   height: 100%;
