--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+
 html,body
 {
     /* width: 100%;
     height: 100%; */
+    font-family: 'Playfair Display', serif !important;
     margin: 0px;
     padding: 0px;
     overflow-x: hidden; 
@@ -42,7 +45,7 @@ html,body
 #timer {
   top: 50%;
   color: #fff;
-  font-size: 100px;
+  font-size: 60px;
 }
 
 
