--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 
-html,body
-{
-    /* width: 100%;
+html,
+body {
+  /* width: 100%;
     height: 100%; */
-    font-family: 'Playfair Display', serif !important;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-    background-color: #F7ECE2;
-    
+  font-family: "Playfair Display", serif !important;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+  background-color: #f7ece2;
 }
 
 .img-height {
@@ -23,6 +22,8 @@ html,body
   z-index: 10;
   max-width: 100%;
 }
+
+
 
 /* .carousel-test {
   z-index: 5;
@@ -50,7 +51,6 @@ html,body
   font-size: 60px;
 }
 
-
 /* @media only screen and (max-width: 900px) {
   #logo-n-timer-container {
     width: 500px;
@@ -60,8 +60,6 @@ html,body
   }
 } */
 
-
-
 @media only screen and (max-width: 1000px) {
   #logo-n-timer-container {
     width: 600px;
@@ -69,8 +67,10 @@ html,body
   #timer {
     font-size: 35px;
   }
+  .navbar {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
 }
-
 
 @media only screen and (max-width: 700px) {
   #logo-n-timer-container {
@@ -80,8 +80,6 @@ html,body
     font-size: 35px;
   }
 }
-
-
 
 @media only screen and (max-width: 600px) {
   #logo-n-timer-container {
@@ -100,5 +98,3 @@ html,body
     font-size: 20px;
   }
 }
-
-
