--- a/gallery-style.css
+++ b/gallery-style.css
@@ -16,6 +16,14 @@ html,body
   overflow: hidden;
 }
 
+/* Set the size of the div element that contains the map */
+#map {
+  height: 400px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */
+}
+
 .green {
   background-color: #6fb936;
 }
