--- a/gallery-style.css
+++ b/gallery-style.css
@@ -3,6 +3,7 @@ html,
 body {
   /* width: 100%;
     height: 100%; */
+    text-align: justify;
   font-family: "Playfair Display", serif !important;
   margin: 0px;
   padding: 0px;
@@ -93,4 +94,8 @@ body {
 
 .progress {
   height: 10px;
+}
+
+.justify{
+  text-align: justify;
 }
