--- a/style.css
+++ b/style.css
@@ -51,14 +51,18 @@ body {
   font-size: 60px;
 }
 
-/* @media only screen and (max-width: 900px) {
-  #logo-n-timer-container {
-    width: 500px;
-  }
-  #timer {
-    font-size: 35px;
-  }
-} */
+.social-link {
+  width: 30px;
+  height: 30px;
+  border: 1px solid #ddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #666;
+  border-radius: 50%;
+  transition: all 0.3s;
+  font-size: 0.9rem;
+}
 
 @media only screen and (max-width: 1000px) {
   #logo-n-timer-container {
