removed scroll bar

--- a/style.css
+++ b/style.css
@@ -11,6 +11,17 @@ body {
   background-color: #f7ece2;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 .img-height {
   height: 100vh;
   /* background-color: black; */
