--- a/gallery-style.css
+++ b/gallery-style.css
@@ -7,9 +7,21 @@ body {
   font-family: "Playfair Display", serif !important;
   margin: 0px;
   padding: 0px;
-  overflow-x: hidden;
+  overflow-x: hidden; /* Hide horizontal scrollbar */
   background-color: #f7ece2 !important;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 
 #demo {
   height: 100%;
