--- a/gallery-style.css
+++ b/gallery-style.css
@@ -111,3 +111,25 @@ body {
 .justify{
   text-align: justify;
 }
+
+#more {display: none;}
+
+.eb-container{
+  display: flex;
+  /* width: 70%; */
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+@media only screen and (max-width: 990px) {
+ 
+.eb-container{
+  display: flex;
+  flex-direction: column;
+  /* width: 70%; */
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+}
