--- a/style.css
+++ b/style.css
@@ -131,4 +131,8 @@ body {
   }
 }
 
-#more {display: none;}
+#more1 {display: none;}
+#more2 {display: none;}
+#more3 {display: none;}
+#more4 {display: none;}
+#more5 {display: none;}
