added contact us and collaborators

--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ html,
 body {
   width: 100%;
   height: 100%;
-  /* overflow-x: hidden; */
 }
 
 a {
@@ -22,30 +21,29 @@ a {
 
 #back {
   width: 100%;
-  min-height: 100%;
+  /* min-height: 100%; */
+  overflow: hidden;
 }
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   margin: 0 auto;
   margin-top: 80px;
-  width: 65%;
+  width: 100%;
   height: 100px;
-
 }
 
 #logo {
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #logo img {
-  height: 100%;
-}
-
-#logo p {
-  font-weight: 100;
+  width: 400px;
 }
 
 nav .links a {
@@ -53,17 +51,31 @@ nav .links a {
   font-size: 15px;
 }
 
-nav .links a:nth-child(2) {
-  margin-left: 40px;
+nav .links a {
+  margin: 20px;
 }
 
-h2 {
+.heading {
   text-align: center;
   font-size: 55px;
   font-family: "Cormorant", serif;
   font-weight: 100;
   line-height: 65px;
+  opacity: 1;
   margin-top: 70px;
+}
+
+.header-section {
+  margin-top: 70px;
+}
+
+.header {
+  text-align: center;
+  font-size: 55px;
+  font-family: "Cormorant", serif;
+  font-weight: 100;
+  line-height: 65px;
+  opacity: 1;
 }
 
 #main {
@@ -159,7 +171,7 @@ h2 {
   background-image: url(./assets/img-6.jpg);
 }
 
-.videoplayer-center {
+.videoplayer-center-text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -168,15 +180,24 @@ h2 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  flex-grow: 1;
   align-items: center;
-  min-width: min-content;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .btn {
-  background-color: #fff;
-  margin: 20px;
+  border: 2px solid #fff;
+  color: #fff;
+  margin: 10px 20px;
   text-align: center;
-  padding: 20px;
+  padding: 10px 20px;
+  transition: all 0.2s ease-in-out;
+}
+
+.btn:hover {
+  background-color: #fff;
+  color: #000;
 }
 
 .center-text {
@@ -188,24 +209,32 @@ h2 {
   padding: 50px;
   margin-top: 70px;
   width: 100%;
-  height: 80vh;
   display: flex;
+}
+.img-text-container {
+  width: 30%;
+}
+
+.img-text-container p {
+  margin-top: 20px;
+  text-align: center;
+  line-height: 22px;
 }
 
 #sec-gen-img {
   background-size: cover;
   background-position: center;
-  width: 50%;
+  width: 100%;
+  height: 600px;
+  margin-right: 40px;
   background-image: url(./assets/img-5.jpg);
 }
 
 #sec-gen-msg {
-  width: 50%;
-  font-size: 30px;
+  width: 70%;
   line-height: 40px;
-  margin: 100px;
   display: flex;
-  align-items: center;
+  margin-left: 40px;
 }
 
 .section-sponsors {
@@ -239,7 +268,7 @@ h2 {
 
 .wrapper {
   width: 80%;
-  margin: 180px auto;
+  margin: 90px auto;
   height: 100%;
 }
 
@@ -265,72 +294,109 @@ h2 {
   z-index: 1;
 }
 
+hr {
+  text-align: center;
+  width: 400px;
+  margin: auto;
+}
 
-footer{
-    /* position: absolute;
+footer {
+  /* position: absolute;
     bottom: 0; */
-    background: #fff;
-    height: auto;
-    width: 100vw;
-    font-family: "Open Sans";
-    padding-top: 40px;
-    color: #000;
+  background: #fff;
+  height: auto;
+  width: 100vw;
+  font-family: "Open Sans";
+  padding-top: 40px;
+  color: #000;
 }
-.footer-content{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
+  text-align: center;
 }
-.footer-content h3{
-    font-size: 1.8rem;
-    font-weight: 400;
-    text-transform: capitalize;
-    line-height: 3rem;
+.footer-content h3 {
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
 }
-.footer-content p{
-    max-width: 500px;
-    margin: 10px auto;
-    line-height: 28px;
-    font-size: 14px;
+.footer-content p {
+  max-width: 500px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
 }
-.socials{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 1rem 0 3rem 0;
+.socials {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1rem 0 3rem 0;
 }
-.socials li{
-    margin: 0 10px;
+.socials li {
+  margin: 0 10px;
 }
-.socials a{
-    text-decoration: none;
-    color: #000;
+.socials a {
+  text-decoration: none;
+  color: #000;
 }
-.socials a i{
-    font-size: 1.1rem;
-    transition: color .4s ease;
+.socials a i {
+  font-size: 1.1rem;
+  transition: color 0.4s ease;
+}
+.socials a:hover i {
+  color: aqua;
+}
 
+.footer-bottom {
+  width: 100vw;
+  padding: 20px 0;
+  text-align: center;
 }
-.socials a:hover i{
-    color: aqua;
+.footer-bottom p {
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+.footer-bottom span {
+  text-transform: uppercase;
+  opacity: 0.4;
+  font-weight: 200;
 }
 
-.footer-bottom{
-    background: #f4f4f4;
-    width: 100vw;
-    padding: 20px 0;
-    text-align: center;
+.content-one,
+.content-two,
+.content-three {
+  width: 100%;
+  height: 50vh;
 }
-.footer-bottom p{
-    font-size: 14px;
-    word-spacing: 2px;
-    text-transform: capitalize;
+
+.contact {
+  margin: 10px 0;
 }
-.footer-bottom span{
-    text-transform: uppercase;
-    opacity: .4;
-    font-weight: 200;
+
+.contact h5,
+.contact p {
+  line-height: normal;
+}
+
+.comming-soon{
+  color: rgb(133, 133, 133);
+  text-align: center;
+  margin: 100px 0px;
+}
+
+.banner{
+  background-color: rgb(235, 27, 27);
+  padding: 10px 0;
+  text-align: center;
+  color: #fff;
+}
+
+.banner a{
+  color: #fff;
+  text-decoration: underline;
 }
