--- a/styles1.css
+++ b/styles1.css
@@ -8,14 +8,14 @@ body {
 }
 
 body {
-    box-sizing: border-box;
-    padding: 0 120px;
+    box-sizing: border-box; 
+    padding: 0 120px; 
     overflow-x: hidden;
 }
 
 .content {
     width: 70%;
-    margin: 200px auto;
+    margin: 200px auto; 
 }
 
 .container {
@@ -133,8 +133,17 @@ p {
 }
 
 @media (max-width: 990px) {
+    html,
+body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 1600px !important;
+    background: #D0C7C7;
+}
+
     .content {
-        width: 100%;
+        width: 90%;
     }
     h1 {
         font-size: 20px;
