--- a/style.css
+++ b/style.css
@@ -42,18 +42,49 @@ nav {
   align-items: center;
 }
 
+li {
+  list-style: none;
+}
+
 #logo img {
   width: 400px;
 }
 
-nav .links a {
+.links {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #000;
+}
+
+.links li {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sub-menu-1 {
+  /* display: none; */
+  position: absolute;
+  bottom: 0;
+  background-color: gray;
+}
+
+
+
+
+nav .links li a {
   color: rgb(94, 94, 224);
   font-size: 15px;
 }
 
-nav .links a {
+nav .links li a {
   margin: 20px;
 }
+
+
 
 .heading {
   text-align: center;
@@ -66,7 +97,7 @@ nav .links a {
 }
 
 .header-section {
-  margin-top: 70px;
+  margin: 100px 0px;
 }
 
 .header {
@@ -383,20 +414,37 @@ footer {
   line-height: normal;
 }
 
-.comming-soon{
+.comming-soon {
   color: rgb(133, 133, 133);
   text-align: center;
   margin: 100px 0px;
 }
 
-.banner{
-  background-color: rgb(235, 27, 27);
+.banner {
+  background: rgb(58, 58, 180);
+  background: linear-gradient(
+    90deg,
+    rgba(58, 58, 180, 1) 24%,
+    rgba(253, 29, 29, 1) 100%,
+    rgba(252, 176, 69, 1) 100%
+  );
   padding: 10px 0;
   text-align: center;
   color: #fff;
 }
 
-.banner a{
+.banner a {
   color: #fff;
   text-decoration: underline;
+}
+
+.theme-eng {
+  text-align: center;
+  font-family: "Cormorant", serif;
+  font-weight: 100;
+}
+
+.theme {
+  font-style: italic;
+  font-weight: bolder;
 }
