--- a/about.css
+++ b/about.css
@@ -1,21 +1,7 @@
-html,
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 1600px !important;
-    background: #D0C7C7;
-}
-
-body {
-    box-sizing: border-box; 
-    padding: 0 120px; 
-    overflow-x: hidden;
-}
 
 .content {
     width: 70%;
-    margin: 200px auto; 
+    margin: 50px auto; 
 }
 
 .container {
@@ -23,33 +9,38 @@ body {
 }
 
 h1 {
-    text-transform: uppercase;
-    color: black;
-    font-family: "Monument Extended";
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 1.3px;
-    padding: 5px 0;
     margin-bottom: 5px;
+    padding: 30px 0px;
 }
 
 p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
-    color: black;
      font-size: 20px;
 }
 
+.header-text{
+    text-align: justify;
+    display: inline-block;
+    position: relative;
+    line-height: 30px;
+    overflow: hidden;
+}
+
 .text {
-    
-    color: transparent;
+    text-align: justify;
     display: inline-block;
     position: relative;
     overflow: hidden;
     transition: 0.8s;
+    line-height: 30px;
+    margin: 50px 0px;
 }
+
 .text.reveal {
-    color: black;
     animation: revealTextAnimation 0.64s ease forwards;
 }
 .text:before {
@@ -61,7 +52,13 @@ p {
     /*   z-index: 1; */
 }
 .text.reveal:before {
-    background: #6c2e13;
+    background: rgb(58, 58, 180);
+    background: linear-gradient(
+      90deg,
+      rgba(58, 58, 180, 1) 24%,
+      rgba(253, 29, 29, 1) 100%,
+      rgba(252, 176, 69, 1) 100%
+    );
     animation: blockRevealAnimation 0.8s ease forwards;
 }
 
@@ -69,11 +66,16 @@ p {
     position: relative;
     display: block;
     overflow: hidden;
+    height: 400px;  
 }
 
 .img img {
-    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
     opacity: 0;
+    background-size: cover;
+    object-fit: cover;
+    background-position: center;
 }
 
 .img:before {
@@ -87,7 +89,13 @@ p {
 }
 
 .img.reveal:before {
-    background: #544c26;
+    background: rgb(58, 58, 180);
+    background: linear-gradient(
+      90deg,
+      rgba(58, 58, 180, 1) 24%,
+      rgba(253, 29, 29, 1) 100%,
+      rgba(252, 176, 69, 1) 100%
+    );
     animation: blockRevealAnimation 0.8s ease forwards;
 }
 
@@ -133,21 +141,10 @@ p {
 }
 
 @media (max-width: 990px) {
-    html,
-body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 1600px !important;
-    background: #D0C7C7;
-}
-
     .content {
         width: 90%;
     }
-    h1 {
-        font-size: 20px;
-    }
+
     p {
         font-size: 16px;
     }
