--- a/committes.css
+++ b/committes.css
@@ -87,7 +87,7 @@ margin-top: 0px;
 .solid {
   border-style: solid;
   border-color: #808080;
-  border-bottom:
+  /* border-bottom: */
 }
 
 /* The cover (expanding background) */
