--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
 
 html,
 body {
-  width: 100%;
   height: 100%;
 }
 
@@ -21,7 +20,6 @@ a {
 }
 
 #back {
-  width: 100%;
   /* min-height: 100%; */
   overflow: hidden;
 }
@@ -35,7 +33,7 @@ nav {
   width: 100%;
   height: 100px;
   text-align: center;
-  z-index: 20;
+  z-index: 100;
 }
 
 .quote{
@@ -56,11 +54,12 @@ nav {
 
 .menu-bar ul li{
   width: 120px;
-  padding: 15px;
+  padding: 15px 10px;
 }
 
 .sub-menu-1{
   display: none;
+  z-index: 100;
 }
 
 .menu-bar ul li:hover .sub-menu-1{
@@ -318,6 +317,14 @@ nav .links li a {
   width: 30%;
 }
 
+.message{
+  display: flex;
+  flex-direction: column;
+  width: 70%;
+  height: 100%;
+
+}
+
 @media only screen and (max-width: 900px ) {
   .img-text-container {
     display: none;
@@ -340,10 +347,16 @@ nav .links li a {
 }
 
 #sec-gen-msg {
-  width: 70%;
+  width: 100%;
   line-height: 40px;
-  display: flex;
   margin-left: 40px;
+}
+
+#sec-gen-regards{
+  color: grey;
+  width: 70%;
+  margin-left: 40px;
+  line-height: 30px;
 }
 
 @media only screen and (max-width: 900px ) {
@@ -478,6 +491,11 @@ footer {
 }
 .socials a:hover i {
   color: #000;
+}
+
+.regards{
+  color: grey;
+  display: block;
 }
 
 .footer-bottom {
